{
  "version": 4,
  "terraform_version": "0.15.2",
  "serial": 409,
  "lineage": "396a33db-5cff-78d6-83b6-a409ab8c524c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557459294105:route-table/rtb-0773879c9495da756",
            "default_route_table_id": "rtb-0773879c9495da756",
            "id": "rtb-0773879c9495da756",
            "owner_id": "557459294105",
            "propagating_vgws": [
              "vgw-031e23c755445acee"
            ],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0630190da9f1f8dae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-aws-gcp-vpc"
            },
            "tags_all": {
              "Name": "rt-aws-gcp-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-079045d7b81172b22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpn_gateway.vpn_gw",
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557459294105:internet-gateway/igw-0630190da9f1f8dae",
            "id": "igw-0630190da9f1f8dae",
            "owner_id": "557459294105",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-079045d7b81172b22"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6113bf79309c348",
            "route_table_id": "rtb-0773879c9495da756",
            "subnet_id": "subnet-0fe29f5a7f8c67131"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpn_gateway.vpn_gw",
            "aws_default_route_table.example",
            "aws_internet_gateway.igw",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557459294105:subnet/subnet-0fe29f5a7f8c67131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0fe29f5a7f8c67131",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557459294105",
            "tags": {
              "Name": "subnet-us-east-1"
            },
            "tags_all": {
              "Name": "subnet-us-east-1"
            },
            "vpc_id": "vpc-079045d7b81172b22"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557459294105:vpc/vpc-079045d7b81172b22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03b10c9a4fe86c872",
            "default_route_table_id": "rtb-0773879c9495da756",
            "default_security_group_id": "sg-0deb53ce7e0a6299a",
            "dhcp_options_id": "dopt-fc632286",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-079045d7b81172b22",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0773879c9495da756",
            "owner_id": "557459294105",
            "tags": {
              "Name": "vpc-aws-gcp-vpn"
            },
            "tags_all": {
              "Name": "vpc-aws-gcp-vpn"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-11-29T05:18:51.915-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/superproject-333310/global/firewalls/allow-icmp-ssh",
            "log_config": [],
            "name": "allow-icmp-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/superproject-333310/global/networks/vpc-aws-gcp",
            "priority": 1000,
            "project": "superproject-333310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/superproject-333310/global/firewalls/allow-icmp-ssh",
            "source_ranges": [
              "0.0.0.0/0",
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/superproject-333310/global/networks/vpc-aws-gcp",
            "mtu": 0,
            "name": "vpc-aws-gcp",
            "project": "superproject-333310",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/superproject-333310/global/networks/vpc-aws-gcp"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "cloudrouter",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65420
              }
            ],
            "creation_timestamp": "2021-11-29T05:18:52.254-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/superproject-333310/regions/us-east1/routers/cloud-router-aws-gcp-vpn",
            "name": "cloud-router-aws-gcp-vpn",
            "network": "https://www.googleapis.com/compute/v1/projects/superproject-333310/global/networks/vpc-aws-gcp",
            "project": "superproject-333310",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/superproject-333310/regions/us-east1/routers/cloud-router-aws-gcp-vpn"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-29T05:18:52.247-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/superproject-333310/regions/us-east1/subnetworks/subnet-us-east-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-us-east-1",
            "network": "https://www.googleapis.com/compute/v1/projects/superproject-333310/global/networks/vpc-aws-gcp",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "superproject-333310",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/superproject-333310/regions/us-east1/subnetworks/subnet-us-east-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}